20240602
*Cleanup codes.
*Improved man page.

20240601
*Changed the default behavior of the PKG_REPLACE_DB_DIR with option
 "-dd" or "-RR". Created files are not deleted but retained.
 If you want to clean the PKG_REPLACE_DB_DIR, set option "--cleandeps".
*The default location of the PKG_REPLACE_DB_DIR has changed from
 /var/tmp/pkg_replace to /var/db/pkg_replace.
*Add option "--makedb". Create files only in the PKG_REPLACE_DB_DIR.
*Cleanup codes.

20240530
*Rename option "--no-conf" -> "--no-configfile".

20240526
*Cleanup options.
 Add "--no-verbose", "--no-config", and "--no-force-config", etc.

20240525
*Improved the summary message.

20240518
*Add "-X" option.
 Remove the libraries in PKGCOMPATDIR, when the specified packages have the
 libraries with the same name as the one in PKGCOMPATDIR. This may be useful
 when there are errors due to a mixture of old and new libraries.
 See pkg_replace(1).
*Improved the summary message.
*Cleanup codes.

20140516
*Cleanup codes.

20240514
*Remove the old library with the same name as the new library from PKGCOMPATDIR.
 See https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=268652

20240507
*Fix handling of removed ports.

20240303
*Improved handling of ports where origin has moved.

20240217
*Cleanup codes.

20240209
*Improved messages of SUBPACKAGES feature and IGNORE packages.

20240205
*Improved handling of SUBPACKAGES feature.

20240131
*Support SUBPACKAGES feature.

20231008
*Check the pkg command if it is installed or not.

20230922
*Improved FLAVOR handling when installing new packages.
 See example section in pkg_replace(1).

20230916
*Fix bug when FLAVOR is lost.

20230418
*Changed the behavior of "-U" option.
 If you use "-U" option, pkg_replace unlock packages before deinstall packages
 and lock packages again after install.

20230408
*Fix "-t" option bug in do_install().

20230329
*Add "-t" option.
 If you use `pkg_replace -t make_target ...`, do only `make make_target`.

20230327
*Fix handling relative path.
